<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>simzentrum</groupId>
  <artifactId>simsystem</artifactId>
  <version>24.1</version>
  <packaging>jar</packaging>
  
  <properties>
  	<maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <!--
    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
	<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
	-->
    <project.build.sourceEncoding>WINDOWS-1252</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
  	<!-- https://mvnrepository.com/artifact/com.github.albfernandez/javadbf -->
  	<dependency>
  		<groupId>com.github.albfernandez</groupId>
  		<artifactId>javadbf</artifactId>
		<version>1.14.0</version>  		
  	</dependency>
  	<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
	<dependency>
    		<groupId>org.xerial</groupId>
    		<artifactId>sqlite-jdbc</artifactId>
    		<version>3.44.1.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
	<dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-math3</artifactId>
    		<version>3.6.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
	<dependency>
    		<groupId>commons-io</groupId>
    		<artifactId>commons-io</artifactId>
    		<version>2.15.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
	<dependency>
    		<groupId>org.apache.poi</groupId>
    		<artifactId>poi</artifactId>
    		<version>5.2.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
	<dependency>
    		<groupId>org.apache.poi</groupId>
    		<artifactId>poi-ooxml</artifactId>
	    <version>5.2.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-full -->
	<dependency>
    		<groupId>org.apache.poi</groupId>
    		<artifactId>poi-ooxml-full</artifactId>
    		<version>5.2.5</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
	<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-core</artifactId>
    		<version>2.20.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
	<dependency>
    		<groupId>org.junit.jupiter</groupId>
    		<artifactId>junit-jupiter-api</artifactId>
    		<version>5.10.1</version>
    		<scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.10.1</version>
        <scope>test</scope>
    </dependency>   
    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-nop</artifactId>
		<version>2.0.9</version>
	</dependency>    
	<!-- https://mvnrepository.com/artifact/org.odftoolkit/simple-odf -->
	<dependency>
    		<groupId>org.odftoolkit</groupId>
    		<artifactId>simple-odf</artifactId>
    		<version>0.9.0</version>
	</dependency>
	<!-- Die folgenden beiden Abhängigkeiten werden nicht direkt genutzt, sondern nur von org.odftoolkit/simple-odf. Dort werden sie jedoch in einer alten Version eingebunden, daher so indirekt ein Update. --> 
	<!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
	<dependency>
    		<groupId>xerces</groupId>
    		<artifactId>xercesImpl</artifactId>
    		<version>2.12.2</version>
		<exclusions>
			<exclusion>
				<groupId>xml-apis</groupId>
				<artifactId>xml-apis</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
	<dependency>
    		<groupId>org.apache.jena</groupId>
    		<artifactId>jena-core</artifactId>
    		<version>4.10.0</version>
	</dependency>
  </dependencies>
  
  <build>

    <resources>
      <resource>
        <directory>src/main/java</directory>
        <excludes><exclude>**/*.java</exclude></excludes>
      </resource>
    </resources>

    <plugins>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
	  </plugin>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-failsafe-plugin</artifactId>
		<version>3.0.0-M5</version>
	  </plugin>
	  <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <excludes><exclude>**/simtest/*</exclude></excludes>
        </configuration>
      </plugin>	  
	</plugins>
  </build>
  
  <developers>
    <developer>
      <id>Alexander Herzog</id>
      <name>Alexander Herzog</name>
      <email>alexander.herzog@tu-clausthal.de</email>
      <organization>Simulationswissenschaftliches Zentrum Clausthal-Göttingen</organization>
      <organizationUrl>https://www.simtentrum.de</organizationUrl>
      <roles><role>architect</role><role>developer</role></roles>
      <timezone>Europe/Berlin</timezone>
    </developer>
  </developers>
</project>